<resources>
    <string name="app_name">仓库条码系统</string>
    <string name="text_small">小</string>
    <string name="text_big">大</string>
    <string name="text_tag">标签</string>
    <string name="text_pack">包装</string>
    <string name="text_input_barcode">输入%s条码</string>
    <string name="toast_func_input_code2">请输入正确的%s编码和%s编码</string>
    <string name="toast_func_input_code1">请先输入%s编码</string>
    <string name="text_material">物料</string>
    <string name="text_button_clear">清空</string>
    <string name="text_button_cancel">取消</string>
    <string name="text_dialog_clear">注意，该操作将清空本地缓存数据。</string>
    <string name="text_button_add">增加</string>
    <string name="text_codenum">编号</string>
    <string name="text_count">数量</string>
    <string name="text_sum">总数:</string>
    <string name="text_warehouse_position">库位</string>
    <string name="text_button_submit">提交</string>
    <string name="toast_list_empty">列表没有数据</string>
    <string name="toast_list_diffenrcetag">输入的%s与列表数据不同，请先清空当前列表。</string>
    <string name="text_ship_line">发货行</string>
    <string name="text_cardboard">托盘</string>
    <string name="toast_no_record">没有找到对应记录</string>
    <string name="text_button_remove">减少</string>
    <string name="toast_remove_success">移除记录成功</string>
    <string name="toast_add_success">添加%s成功</string>
    <string name="text_withdraw">下架</string>
    <string name="text_puton">上架</string>
    <string name="toast_puton_hint">请先选择需要上架的记录</string>
    <string name="text_status">状态</string>
    <string name="toast_submit_result">提交完成，总共%d条记录，%d条记录提交失败</string>
    <string name="toast_check_fail">查询失败</string>
    <string name="text_status_success">提交成功</string>
    <string name="text_status_failure">提交失败</string>
    <string name="text_status_pending">未提交</string>

</resources>
