<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_10"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_material"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_func1_tag2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/text_frame"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_func1_recommand"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@color/colorPrimaryDark"
            android:text="推荐库位"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_warehouse_position"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_func1_tag0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/text_frame"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_pack"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_func1_tag1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/text_frame"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_func1_currentTag0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:singleLine="true"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_sum" />

        <TextView
            android:id="@+id/tv_func1_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="0"
            android:textColor="@android:color/holo_green_dark" />

        <Button
            android:id="@+id/button_func1_add"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/text_button_add"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/text_codenum"
            android:textColor="@android:color/background_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/text_count"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_func1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#05000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_func1_submit"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:text="@string/text_button_submit"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>